tests/paczka2/big_fuzzy/76051897.err
Error in line 2: ZCr A719 34,90
Error in line 12: JYGmuZy A178 92,8
Error in line 15: JYGmuZy A719 18,0
Error in line 11: UA3gXzqV A719 54,3
Error in line 21: ZCr A719 139,4
Error in line 27: 9lN0Q3sy A719 94,2
Error in line 22: ZCr A347 57,6
Error in line 29: 9lN0Q3sy S337 57,0
Error in line 26: JYGmuZy A178 98,0
Error in line 39: UA3gXzqV A178 12,7
Error in line 42: UA3gXzqV A347 82,6
Error in line 47: ZCr A719 25,96
Error in line 49: 9lN0Q3sy A719 9,2
Error in line 50: 9lN0Q3sy A347 9,7
Error in line 30: ZCr A719 14,7
Error in line 68: ZCr A178 95,7
Error in line 74: S337 A347 41,9
Error in line 77: JYGmuZy S337 91,9
Error in line 83: TuxILxmn7L A347 36,3
Error in line 75: S337 A719 23,6
Error in line 84: TuxILxmn7L A178 37,2
Error in line 101: TuxILxmn7L S337 78,4
Error in line 105: TuxILxmn7L A178 47,7
Error in line 79: UA3gXzqV A719 62,4
Error in line 130: ZCr A178 66,1
Error in line 131: ZCr S337 58,6
Error in line 143: 9lN0Q3sy S337 76,6
Error in line 137: UA3gXzqV A719 21,1
Error in line 144: 9lN0Q3sy A719 88,1
Error in line 151: 9lN0Q3sy A178 40,2
Error in line 155: Wrd4b A178 6,9
Error in line 159: TuxILxmn7L A178 16,0
Error in line 176: UA3gXzqV S337 17,1
Error in line 173: TuxILxmn7L S337 50,7
Error in line 181: Wrd4b A347 51,5
Error in line 189: Wrd4b A719 70,96
Error in line 186: TuxILxmn7L A719 15,0
Error in line 190: ZCr S337 72,2
Error in line 191: TuxILxmn7L A347 23,5
Error in line 182: JYGmuZy A719 82,9
Error in line 195: JYGmuZy A347 75,8
Error in line 187: Wrd4b A178 94,4
Error in line 213: S337 S337 19,9
Error in line 215: JYGmuZy A719 20,3
Error in line 226: TuxILxmn7L S337 39,59
Error in line 229: ZCr A719 1,1
Error in line 232: UA3gXzqV A178 68,4
Error in line 214: S337 A719 16,6
Error in line 242: S337 A719 16,0
